--- a/public/table.html
+++ b/public/table.html
@@ -117,8 +117,8 @@
     </div>
   </script>
   <script type="text/template" id="joinview">
-    <% if (data.Players && data.Players.length > 0) { %>
-      <h3>Players currently involved:</h3>
+    <% if (!_.isEmpty(data.Players)) { %>
+      <h3>Players currently signed up for the tournament:</h3>
       <div id="signups">
         <ul>
         <% for (var uid in data.Players) { var pl = data.Players[uid]; %>
@@ -128,23 +128,29 @@
         <% } %>
         </ul>
       </div>
-      <button id="startgame" class="gamebutton">Start the Game!</button>
-    <% } else { %>
-    <div class="invites" style="width: 400px; padding: 0.5em; border: 1px solid black;">
-      Sign up to view this game:<br>
-      <br>
-      <form id="joinup">
-        <label>Display Name: <input type="text" name="DisplayName" placeholder="Display Name" value="<%= Player.authuser.displayName %>"></label><br>
-        <br>
-        <label>Room Password: <input type="text" name="Roompass" placeholder="Game Password" value=""></label><br><br>
-        <button>Join</button>
-      </form>
-    </div>
     <% } %>
+    <div class="invites" style="width: 400px; padding: 0.5em; border: 1px solid black;">
+      <br>
+      <br>
+      <% if (Player.info) { %>
+        <button id="startgame" class="gamebutton">Start the Tournament!</button>
+      <% } else if (Game.data.Members && Game.data.Members.length > 0) { %>
+        <form id="signup">
+        <label>Display Name: <input type="text" name="dispname" id="DisplayName" placeholder="Display Name" value="<%= Player.authuser.displayName %>"></label><br>
+        <button class="gamebutton">Sign up for the next Tournament</button>
+        </form>
+      <% } else { %>
+        Hello - Only Members of this table (if it exists) may see or join tournaments. Please
+        enter the room password and join!
+        <form id="joingroup">
+        <label>Room Password: <input type="text" name="roompass" id="RoomPass" placeholder="Game Password" value=""></label><br><br>
+        <button class="gamebutton">Join Group</button>
+        </form>
+      <% } %>
+    </div>
   </script>
   <script type="text/template" id="registerview">
-    Hello - To view and join any of the game tables in RollPoker, you must register or
-    log in.<br>
+    Hello - Please register so we know who you are!<br>
     <br>
     <div id="firebase-register"></div>
   </script>
