Bet/Raise added

--- a/public/makeroom.html
+++ b/public/makeroom.html
@@ -29,33 +29,8 @@
         </td>
       </tr>
       <tr>
-        <th>Game Style</th>
-        <td>
-          <select name="GameType">
-            <option value="sitngo">Sit-n-Go</option>
-            <option value="cash">Cash-in Cash-out</option>
-          </select>
-        </td>
-      </tr>
-      <tr>
-        <th>Betting Structure</th>
-        <td>
-          <select name="BetLimit">
-            <option value="nolimit">No Limit</option>
-            <option value="potlimit">Pot Limit</option>
-          </select>
-        </td>
-      </tr>
-      <tr>
         <th>Starting Chip Count</th>
         <td><input type="text" name="StartingChips" value="2000"></td>
-      </tr>
-      <tr>
-        <th>Chip Values</th>
-        <td>
-          White Red Blue Green Black Yellow<br>
-          <input type="text" name="ChipValues" value="25 100 500 1000 5000 25000">
-        </td>
       </tr>
       <tr>
         <th>(SNG) Betting Structure</th>
@@ -66,8 +41,8 @@
         <td><input type="text" name="BlindTimes" value="40 40 40 40 20"></td>
       </tr>
       <tr>
-        <th>Admin Password</th>
-        <td><input type="text" name="AdminPassword" value="hunter2"></td>
+        <th>Room Password</th>
+        <td><input type="text" name="RoomPass" value="hunter2"></td>
       </tr>
     </table>
     </form>
