--- a/public/table.html
+++ b/public/table.html
@@ -55,9 +55,17 @@
           <div class="dealerbutton"></div>
         <% } %>
         <div class="playerdata <%= player.State %>">
-        <div class="playername"><%= player.DisplayName %><tt class="cash"><%= player.Chips %></tt></div>
+        <div class="playername">
+          <%= player.DisplayName %>
+          <% if (!Presences[player.PlayerId]) { %>
+            <img class="statusicon" src="/statusOffline.png">
+          <% } else { %>
+            <img class="statusicon" src="/status<%= Presences[player.PlayerId]%>.png">
+          <% } %>
+        </div>
         <div class="playerstate">
           <%= player.DisplayState %>
+          <tt class="cash"><%= player.Chips %></tt>
         </div>
         </div>
       </div>
@@ -80,7 +88,7 @@
   </script>
   <script type="text/template" id="menucontents">
     <div id="closemenu"><tt>X</tt> GAME MENU:</div>
-    <label>Name: <input type="text" class="menutext" placeholder="Display Name" id="MenuDisplayName" value="<%= Player.info.DisplayName %>"></label><br>
+    <label>Name: <input type="text" class="menutext" placeholder="Display Name" id="MenuDisplayName" value="<%= Game.data.Members[Player.uid] %>"></label><br>
     <% if (window.Notification && window.Notification.permission != "granted") { %>
       <button id="asknotifications">Enable Notifications</button>
     <% } %>
@@ -96,7 +104,6 @@
       <div id="menu"></div>
       <% } %>
     </div>
-    <div id="logscreen"></div>
     <% if (Player.uid && Player.state != "BUSTED") { %>
       <div id="lower">
         <div id="gamecommands">
@@ -105,7 +112,7 @@
           <button id="cmdcall">Call</button>
           <button id="cmdbet">Bet/Raise</button>
         </div>
-        <div id="myhand" class="myhand"></div>
+        <div id="logscreen"></div>
         <div id="betplaque" class="betplaque">
           <input type="text" id="betval" pattern="\d+" id="raiseval"><br>
           <button id="subbb">- BB</button> <button id="addbb">+ BB</button><br>
@@ -130,7 +137,7 @@
     </div>
   </script>
   <script type="text/template" id="joinview">
-    <% if (Game.data && Game.data.Members[Player.uid]) { %>
+    <% if (Game.data && Game.data.Members && Game.data.Members[Player.uid]) { %>
       <div class="cardsettings" id="cardsettings"></div>
       <div id="menu"></div>
     <% } %>
@@ -150,7 +157,7 @@
       <br>
       <% if (Player.info) { %>
         You are registered for the upcoming tournament.<br><br>
-        <% if (Game.data.Hosts[Player.uid] && _.keys(data.Players).length > 1) { %>
+        <% if (Game.data.Hosts && Game.data.Hosts[Player.uid] && _.keys(data.Players).length > 1) { %>
         <button id="startgame" class="gamebutton">Start the Tournament with <%= _.keys(data.Players).length %> players!</button>
         <% } %>
       <% } else if (_.any(data.Members)) { %>
@@ -166,7 +173,7 @@
         <button class="gamebutton">Join Group</button>
         </form>
       <% } %>
-      <% if (Game.data.Members && _.keys(Game.data.Members).length > 0) { %>
+      <% if (Game.data && Game.data.Members && _.keys(Game.data.Members).length > 0) { %>
       <br><br>
         Members of <%= Game.name %>:<br>
         <%= Render.Members() %>
