--- a/public/table.html
+++ b/public/table.html
@@ -5,6 +5,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/poker.css" />
     <link rel="stylesheet" type="text/css" href="/seats.css" />
+    <link rel="stylesheet" type="text/css" href="/chips.css" />
     <link rel="stylesheet" type="text/css" href="/cards.css" />
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.14.0/firebase-auth.js"></script>
@@ -55,9 +56,7 @@
             <% }); %>
           <% } %>
         </div>
-        <% if (seat == table.Dealer) { %>
-          <div class="dealerbutton"></div>
-        <% } %>
+        <div class="playerdatabg <%= player.State %> <%= Presences[player.PlayerId] %>"></div>
         <div class="playerdata <%= player.State %> <%= Presences[player.PlayerId] %>">
         <div class="playername">
           <%= player.DisplayName %>
@@ -68,13 +67,18 @@
         </div>
         </div>
       </div>
-      <% if (player.Bet > 0) { %>
-        <div class="<%= seat %>bet playerbet"><%= Render.ChipStack(player.Bet) %><tt class="betamt"><%= player.Bet %></tt></div>
+      <% if (seat == table.Dealer || player.Bet > 0) { %>
+        <div class="<%= seat %>bet playerbet">
+        <% if (seat == table.Dealer) { %>
+          <div class="dealerbutton"></div>
+        <% } %>
+        <%= Render.Chips(player.Bet) %>
+        </div>
       <% } %>
     <% } %>
     <% if (table) { %>
       <% if (table.Pot > 0) { %>
-        <div class="pot"><%= Render.ChipStack(table.Pot) %><tt class="betamt"><%= table.Pot %></tt></div>
+        <div class="pot"><%= Render.Chips(table.Pot, 'potchip') %></div>
       <% } %>
       <% if (table.Cards && table.Cards.board) { %>
         <div class="board">
@@ -156,8 +160,8 @@
       <div id="lower">
         <div id="gamecommands">
           <button id="cmdfold" class="hold gameinput">Fold</button>
-          <button id="cmdcall" class="hold gameinput">Call</button>
-          <button id="cmdbet" class="hold gameinput">Bet/Raise</button>
+          <button id="cmdcall" class="gameinput">Call</button>
+          <button id="cmdbet" class="gameinput">Bet/Raise</button>
         </div>
         <div id="indicatorbar" style="display:none;"><tt id="indication"></tt><button id="cancelindicate">(Oops, Cancel)</button></div>
         <div id="logbet">
